--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <title>Tracking Data</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            border: none;
+            overflow: hidden;
+        }
+
+        iframe {
+            width: 100%;
+            height: 1500vh;
+            border: none;
+            outline: none;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbzUWzKjom8xK8IYI9Ht4IEUNZQhf_RydBNAM7pkQPVNhowoGzTav0yFIUFsCGxe2SnU/exec"
-            style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbzUWzKjom8xK8IYI9Ht4IEUNZQhf_RydBNAM7pkQPVNhowoGzTav0yFIUFsCGxe2SnU/exec?embedded=true"></iframe>
 </body>
 </html>
+
