--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Tracking Data</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tracking Data</title>
     <style>
         html, body {
             margin: 0;
             padding: 0;
-            border: none;
+            height: 100%;
             overflow: hidden;
         }
-
         iframe {
             width: 100%;
-            height: 1500vh;
+            height: 150vh;
             border: none;
-            outline: none;
             display: block;
         }
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbzUWzKjom8xK8IYI9Ht4IEUNZQhf_RydBNAM7pkQPVNhowoGzTav0yFIUFsCGxe2SnU/exec?embedded=true"></iframe>
+    <iframe 
+        src="https://script.google.com/macros/s/AKfycbzUWzKjom8xK8IYI9Ht4IEUNZQhf_RydBNAM7pkQPVNhowoGzTav0yFIUFsCGxe2SnU/exec?embedded=true"
+        sandbox="allow-scripts allow-same-origin">
+    </iframe>
 </body>
 </html>
 
